[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/Airship/Player/ship_B.png" type="Texture" id=1]
[ext_resource path="res://Script/Side.gd" type="Script" id=2]
[ext_resource path="res://Node/Object/Player/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.32456

[node name="Side" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
BULLET_SC = ExtResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
